<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/movie_navigation"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie" />

    <item
        android:id="@+id/tv_show_navigation"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/tv_show" />

    <item
        android:id="@+id/favorite_navigation"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />
</menu>