<resources>
    <string name="app_name">The Movie DB</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="duration">Duration</string>
    <string name="rating">Rating</string>
    <string name="release">Release</string>
    <string name="poster">Poster</string>
    <string name="movies">MOVIES</string>
    <string name="tv_shows">TV SHOWS</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="favorite">Favorite</string>
    <string name="creator">by Yogi Prasetio</string>
    <string name="view_on_website">View on Website</string>
</resources>